--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@progress/kendo-data-query": "^1.7.3",
     "@progress/kendo-date-math": "^1.5.15",
     "@progress/kendo-dateinputs-common": "^0.4.9",
+    "@progress/kendo-drawing": "^1.24.0",
     "@progress/kendo-file-saver": "^1.1.2",
+    "@progress/kendo-inputs-common": "^3.1.2",
     "@progress/kendo-intl": "^3.2.1",
     "@progress/kendo-licensing": "^1.10.1",
     "@progress/kendo-popup-common": "^1.9.5",
@@ -37,7 +39,9 @@
     "@progress/kendo-react-popup": "^14.1.1",
     "@progress/kendo-react-progressbars": "^14.1.1",
     "@progress/kendo-react-tooltip": "^14.1.1",
+    "@progress/kendo-smartpaste-common": "^1.0.0",
     "@progress/kendo-theme-default": "^13.0.1",
+    "@progress/kendo-webspeech-common": "^1.0.1",
     "@tanstack/react-query": "^5.90.21",
     "axios": "^1.13.5",
     "cldr-core": "^48.1.0",
